SF-3177 Fix error message text overlap in draft import dialog (#3567)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/project-select/project-select.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/project-select/project-select.component.scss
@@ -2,3 +2,7 @@
 mat-form-field {
   width: 100%;
 }
+
+:host ::ng-deep .mat-mdc-form-field-subscript-wrapper {
+  min-height: 0.75rem;
+}
